# web-agency-mac-agent

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cmake/: dependencies.cmake
config/: config.example.json
src/: main.cpp
src/communicator/: Communicator.cpp  Communicator.h
src/config/: Config.cpp  Config.h
src/executor/: TaskExecutor.cpp  TaskExecutor.h
src/utils/: SignalHandler.cpp  SignalHandler.h  TaskResponse.cpp  TaskResponse.h
tests/: CMakeLists.txt  test_communicator.cpp  test_config.cpp  test_libraries.cpp  test_signal_handler.cpp  test_task_executor.cpp  test_task_response.cpp  test_utils.cpp
